--- a/css/main.css
+++ b/css/main.css
@@ -82,22 +82,19 @@ section h2{
 
 .gallery-primary{
     padding: 1rem 0;
-    margin-inline: 10rem;
+    margin-inline: 12rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 0;
-    border-radius: 1rem;
-    
+    place-items: center;
 }
 
 .gallery-primary img{
     margin-top: 3rem;
     margin-bottom: 3rem;
     width: 40%;
-    margin-inline: 12rem;
-    background-color: var(--gray);
     border-radius: 1rem;
-    justify-content: space-between;
+    display: block;
+    object-fit: cover;
 }
 
 .gallery-secondary{
