--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@import url(./reset.css);
+@import url(./alternance.css);
+@import url(./fiche_E5.css);
+@import url(./projet_ecole.css);
+@import url(./veille.css);
 header {
     display: flex;
     justify-content: space-between;
