--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,6 @@ section h1, h2{
     background-color: var(--green);
     margin: auto;
     padding-top: 5rem;
-
 }
 
 section h2{
@@ -75,7 +74,7 @@ section h2{
     align-items: center;
     justify-content: center;
     font-size: xx-large;
-    margin-inline: 20rem;
+    margin-inline: 5rem;
     border-radius: .7rem;
 }
 
@@ -83,12 +82,12 @@ section h2{
     color: var(--white);
     margin-top: 3rem;
     margin-bottom: 3rem;
-    margin-inline: 20rem;
+    margin-inline: 10rem;
 }
 
 .gallery-primary{
     padding: 1rem 0;
-    margin-inline: 12rem;
+    margin-inline: 10rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     place-items: center;
@@ -105,24 +104,16 @@ section h2{
 
 .gallery-secondary{
     padding: 1rem 0;
-    margin-inline: 10rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border-radius: 3rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
+    display: grid;
+    place-items: center;
 }
 
 .gallery-secondary a{
-    margin: 0 10px;
-    text-align: center;
-    display: inline-block;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 225px;
     overflow: hidden;
 }
 
@@ -130,15 +121,25 @@ section h2{
     object-fit: cover;
     height: 100%;
     width: 100%;
-    display: block;
-    
+    border-radius: 1rem;
 }
 
 .dsc-veille{
-    background-color: #fff;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    margin-inline: 20rem;
+    margin-inline: 10rem;
+    color: var(--white);
+}
+
+.lien-dsc {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-inline: 10rem;
+    text-align: center;
+    font-size: large;
+    text-decoration: underline;
+    text-decoration-color: var(--dark-gray);
+    text-decoration-thickness: 1.5px;
 }
 
 .items {
@@ -150,13 +151,11 @@ section h2{
     padding: 1rem 0;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    margin-inline: 3rem;
+    margin-inline: 5rem;
     display: flexbox;
     grid-template-columns: repeat(3, 1fr);
     place-items: center;
     width: 3%;
-    
-    
 }
 
 footer p{
