mise en page projet_ecole

--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ section h2{
 }
 
 footer p{
+    color: var(--white);
     text-align: center;
     width: 100%;
     background-color: var(--green);
