--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ header {
     color: var(--white);
 }
 
-section h1, h2{
+section #name, h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -72,7 +72,7 @@ section h1, h2{
 
 section h2{
     text-align: center;
-    background-color: #C3DED9ff;
+    background-color: var(--gray);
     padding: .5rem .5rem .5rem .5rem;
     align-items: center;
     justify-content: center;
