--- a/css/projet_ecole.css
+++ b/css/projet_ecole.css
@@ -32,4 +32,5 @@
     text-decoration: underline;
     text-decoration-color: var(--dark-gray);
     text-decoration-thickness: 1.5px;
+    font-size: medium;
 }
