--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ header {
     width: 100%;
     box-shadow: 0px 5px 12px #2B4A4Eff;
     background-color: var(--green);
+    z-index: 999;
 }
 
 .navbar {
@@ -45,6 +46,7 @@ header {
 .img {
     flex: 1;
     height: 100vh;
+    width: 100%;
     background: url("../asset/fond_accueil.jpg")no-repeat fixed center center  / cover;
     z-index: -1;
     display: flex;
@@ -70,6 +72,10 @@ section #name, h2{
     padding-top: 5rem;
 }
 
+.titre{
+    padding-top: 5rem;
+}
+
 section h2{
     text-align: center;
     background-color: var(--gray);
@@ -86,6 +92,7 @@ section h2{
     margin-top: 3rem;
     margin-bottom: 3rem;
     margin-inline: 10rem;
+    padding-top: 5rem;
 }
 
 .gallery-primary{
@@ -94,6 +101,7 @@ section h2{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     place-items: center;
+    padding-top: 5rem;
 }
 
 .gallery-primary img{
@@ -111,7 +119,10 @@ section h2{
     margin-bottom: 3rem;
     grid-template-columns: repeat(3, 1fr);
     display: grid;
+    flex-wrap: wrap;
     place-items: center;
+    padding-top: 5rem;
+    z-index: 1;
 }
 
 .gallery-secondary a{
@@ -127,11 +138,36 @@ section h2{
     border-radius: 1rem;
 }
 
+.project-link {
+    position: relative;
+    display: inline-block;
+}
+
+.project-link:hover img {
+    filter: brightness(0) invert(1);
+}
+
+.project-link:hover .overlay {
+    opacity: 1;
+}
+
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--dark-gray);
+    font-size: 20px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
 .dsc-veille{
     margin-top: 3rem;
     margin-bottom: 3rem;
     margin-inline: 10rem;
     color: var(--white);
+    padding-top: 5rem;
 }
 
 .lien-dsc {
@@ -148,6 +184,7 @@ section h2{
 .items {
     text-align: center;
     justify-content: space-between;
+    padding-top: 3rem;
 }
 
 .items img{
@@ -168,3 +205,4 @@ footer p{
     background-color: var(--green);
     line-height: 5.0rem;
 }
+
