--- a/css/alternance.css
+++ b/css/alternance.css
@@ -2,6 +2,7 @@
     display: flex;
     text-align: center;
     background-color: var(--gray);
+    color: var(--dark);
     padding: .5rem .5rem .5rem .5rem;
     align-items: center;
     justify-content: center;
@@ -45,6 +46,7 @@
     margin-right: .6rem; 
     margin-left: 5rem;
     border-radius: .7rem;
+    color: var(--dark);
 }
 
 .rd {
@@ -54,6 +56,7 @@
     margin-right: 5rem; 
     margin-left: .6rem;
     border-radius: .7rem;
+    color: var(--dark);
 }
 
 h3 {
