--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,18 @@ header {
     align-items: center;
     position: fixed;
     width: 100%;
-    box-shadow: 0px 5px 12px #2B4A4Eff;
+    box-shadow: 0px 5px 12px var(--green);
     background-color: var(--green);
     z-index: 999;
+}
+
+.dark-mode {
+    --green: var(--dark-bg);
+    --dark-gray: var(--dark-gray-2);
+    --gray: var(--dark-green-2);
+    --white: var(--dark-text);
+    --green-2: var(--dark-green-2);
+    --dark: var(--dark-text);
 }
 
 .navbar {
@@ -26,27 +35,20 @@ header {
     display: inline-flex;
     font-size: inherit;
     justify-content: space-between;
+    vertical-align: middle;
 }
 
 .navbar a{
     margin: 0 5rem 0 5rem;
 }
 
-.button_mode{
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    padding: .7rem;
-    border-radius: 5rem;
-    background-color: white;
-    box-shadow: 0px 5px 12px #414141;
+.navbar button{
     cursor: pointer;
+    color: var(--white);
 }
-
 .img {
     flex: 1;
     height: 100vh;
-    width: 100%;
     background: url("../asset/fond_accueil.jpg")no-repeat fixed center center  / cover;
     z-index: -1;
     display: flex;
@@ -79,6 +81,7 @@ section #name, h2{
 section h2{
     text-align: center;
     background-color: var(--gray);
+    color: var(--dark);
     padding: .5rem .5rem .5rem .5rem;
     align-items: center;
     justify-content: center;
