--- a/css/veille.css
+++ b/css/veille.css
@@ -14,6 +14,11 @@
 section p{
     text-align: justify;
     text-align: left;
+    color: var(--dark);
+}
+
+.presentation{
+    color: var(--white);
 }
 
 .list_metho{
