--- a/css/reset.css
+++ b/css/reset.css
@@ -46,19 +46,19 @@ button, input{
 
 :root{
     /* mode light */
-    --green: rgb(72, 116, 124); /* fond clair */
-    --dark-gray: rgb(43, 74, 78); /* bgc h4 */
-    --gray: rgb(209, 224, 222); /* bgc h2 */
+    --green: #48747c; /* fond clair */
+    --dark-gray: #2b4a4e; /* bgc h4 */
+    --gray: #d1e0de; /* bgc h2 */
     --green-2: #537e83; 
     --dark: #000000; /* texte */
-    --white: rgb(255, 255, 255); /* texte */
+    --white: #ffffff; /* texte */
 
     /* mode dark */
     --dark-bg: #1e1e1e;  /* Fond sombre */
     --dark-text: #e6e6e6; /* Texte */
     --dark-text-2: #e6e6e6; /* Texte */
-    --dark-green: rgb(72, 116, 124); /* Vert principal */
+    --dark-green: #48747c; /* Vert principal */
     --dark-green-2: #325056; /* Vert assombri */
     --dark-gray-1: #14282a; /* Gris foncé */
-    --dark-gray-2: rgb(195, 222, 217); /* Gris clair */
+    --dark-gray-2: #c3ded9; /* Gris clair */
 }
